--- a/dingus.html
+++ b/dingus.html
@@ -7,13 +7,13 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/0.d7cc313c.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.9970c874.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.5d3d5515.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.b6fb071f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.d354a899.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.5fb467b1.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.3b181b8a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.3185dc11.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.894f133f.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.b73f3da6.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.202b07c3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.73216c00.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.9b82725b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.a811f6b0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_commonjsHelpers.725317a4.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -34,7 +34,7 @@
 			
 			<script>
 				{
-					__sveltekit_6yvbwf = {
+					__sveltekit_1kl4lem = {
 						assets: "/commonmark-spec-viewer",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -45,8 +45,8 @@
 					const data = [null,{"type":"data","data":null,"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.5d3d5515.js"),
-						import("./_app/immutable/entry/app.3b181b8a.js")
+						import("./_app/immutable/entry/start.b6fb071f.js"),
+						import("./_app/immutable/entry/app.894f133f.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
